--- a/plan.html
+++ b/plan.html
@@ -272,7 +272,7 @@
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3027.397833499556!2d139.9277374152777!3d40.64315997933948!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f30.1!3m3!1m2!1s0x5f9a447f30b44543%3A0xb6431a45149d3930!2z44CSMDM4LTIzMjQg6Z2S5qOu55yM6KW_5rSl6Lu96YOh5rex5rWm55S65rex5rWm5rWc55S677yT77yU77yY4oiS77yX!5e0!3m2!1sja!2sjp!4v1606640174946!5m2!1sja!2sjp"
                 width="100%"
-                height="450"
+                height="100%"
                 frameborder="0"
                 style="border: 0"
                 allowfullscreen=""
