--- a/about.html
+++ b/about.html
@@ -3,24 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/about.css" />
+    <link rel="stylesheet" href="css/destyle.css" />
     <title>Document</title>
   </head>
   <body>
     <header></header>
-    <aside>
-      <nav>
-        <ul>
-          <li>list1</li>
-          <li>list2</li>
-          <li>list3</li>
-          <li>list4</li>
-          <li>list5</li>
-        </ul>
-      </nav>
-      <div>side footer</div>
-    </aside>
-    <main>メイン</main>
-    <footer></footer>
+    <div class="mustHead">
+      <img src="img/plan_musthead_bg.jpg" alt="" width="100%" />
+    </div>
+    <main>
+      <div class="content">test</div>
+      <div class="sidebar">
+        <p>test</p>
+      </div>
+    </main>
   </body>
 </html>
