--- a/plan.html
+++ b/plan.html
@@ -7,7 +7,7 @@
       name="description"
       content="1935（昭和8）年創業。深浦町の皆様に支えられて８０有余年。時代の流れに合わせた様々なお葬式に、まごころ込めてご奉仕させていただきます。"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/plan.css" />
     <link rel="stylesheet" href="css/destyle.css" />
     <title>Document</title>
   </head>
@@ -64,36 +64,21 @@
               <div class="grid-3">
                 <div class="grid-3-item card">
                   <img
-                    src="img/plan_general_card_1.jpg"
+                    src="img/general_plan_1.svg"
                     alt="アートフラワー 450,000円（税別）"
-                    width="100%"
                   />
-                  <div class="cardGeneralDescripton">
-                    <div><span>45</span>アートフラワー</div>
-                    <p><span>450,000</span>円（税別）</p>
-                  </div>
                 </div>
                 <div class="grid-3-item card">
                   <img
-                    src="img/plan_general_card_2.jpg"
+                    src="img/general_plan_2.svg"
                     alt="アートフラワー 550,000（税別）"
-                    width="100%"
                   />
-                  <div class="cardGeneralDescripton">
-                    <div><span>55</span>アートフラワー</div>
-                    <p><span>550,000</span>円（税別）</p>
-                  </div>
                 </div>
                 <div class="grid-3-item card">
                   <img
-                    src="img/plan_general_card_3.jpg"
+                    src="img/general_plan_3.svg"
                     alt="生花 650,000円（税別）"
-                    width="100%"
                   />
-                  <div class="cardGeneralDescripton">
-                    <div><span>65</span>生花</div>
-                    <p><span>650,000</span>円（税別）</p>
-                  </div>
                 </div>
               </div>
               <p class="note">
@@ -119,36 +104,18 @@
               <div class="grid-3">
                 <div class="grid-3-item card">
                   <img
-                    src="img/plan_home_card_1.jpg"
-                    alt="アートフラワー 330,000円（税別）"
-                    width="100%"
+                    src="img/home_plan_1.svg"
+                    alt="アートフラワー 450,000円（税別）"
                   />
-                  <div class="cardHomeDescripton">
-                    <div><span>33</span>アートフラワー</div>
-                    <p><span>330,000</span>円（税別）</p>
-                  </div>
                 </div>
                 <div class="grid-3-item card">
                   <img
-                    src="img/plan_home_card_2.jpg"
-                    alt="アートフラワー 400,000（税別）"
-                    width="100%"
+                    src="img/home_plan_2.svg"
+                    alt="アートフラワー 550,000（税別）"
                   />
-                  <div class="cardHomeDescripton">
-                    <div><span>40</span>アートフラワー</div>
-                    <p><span>400,000</span>円（税別）</p>
-                  </div>
                 </div>
                 <div class="grid-3-item card">
-                  <img
-                    src="img/plan_home_card_3.jpg"
-                    alt="生花 450,000円（税別）"
-                    width="100%"
-                  />
-                  <div class="cardHomeDescripton">
-                    <div><span>45</span>生花</div>
-                    <p><span>450,000</span>円（税別）</p>
-                  </div>
+                  <img src="img/home_plan_3.svg" alt="生花 650,000円（税別）" />
                 </div>
               </div>
               <p class="note">
@@ -175,42 +142,32 @@
                 <div class="grid-2 bgEnshrine">
                   <div class="grid-2-item">
                     <div class="card">
-                      <img
-                        src="img/plan_enshrine_card.jpg"
-                        alt=""
-                        width="100%"
-                      />
-                      <div class="cardEnshrineDescription">
-                        <p><span>19万8千円</span>プラン</p>
-                        <p><span>198,000</span>円（税別）</p>
-                      </div>
+                      <img src="img/enshrine_plan.svg" alt="" />
                     </div>
                   </div>
                   <div class="grid-2-item">
-                    <h3 id="plan_anchor_4">安置室について</h3>
-                    <p>
+                    <h3 id="plan_anchor_4" style="margin-bottom:30px;">安置室について</h3>
+                    <p style="margin-bottom:20px;">
                       当社では、ご遺体をお預かりする安置室を完備しています。
                     </p>
-                    <ul>
-                      <li>・ご自宅を片付ける時間が無い</li>
-                      <li>
+                    <div>
+                      <p>・ご自宅を片付ける時間が無い</p>
+                      <p>
                         ・老人施設に入所していたためご自宅が空き家で、電気や水道が使えない
-                      </li>
-                      <li>・自宅に安置するまで一時的に使いたい　など</li>
-                    </ul>
+                      </p>
+                      <p>・自宅に安置するまで一時的に使いたい　など</p>
+                    </div>
                     <p>
                       様々なご事情でご自宅に安置できない場合等ご相談ください。
                     </p>
                     <p style="margin-top: 30px">
                       ＜安置室に完備されているもの＞
                     </p>
-                    <div>
-                      <ul class="flex flex-between">
-                        <li>◆簡易流し台</li>
-                        <li>◆トイレ</li>
-                        <li>◆電子レンジ</li>
-                        <li>◆冷蔵庫</li>
-                      </ul>
+                    <div class="grid">
+                        <p>◆簡易流し台</p>
+                        <p>◆トイレ</li>
+                        <p>◆電子レンジ</li>
+                        <p>◆冷蔵庫</p>
                     </div>
                   </div>
                 </div>
